[gd_scene load_steps=11 format=2]

[ext_resource path="res://Imagenes/PantallaMuerte.jpg" type="Texture" id=1]
[ext_resource path="res://Fuentes/remnant/Remnant-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Puzzles/Puzzle_B.gd" type="Script" id=3]
[ext_resource path="res://Musica/Main_Menu.mp3" type="AudioStream" id=4]
[ext_resource path="res://Puzzles/Imagenes y NOTA/PUZZLE_1B_IMAGENES/220px-Hammer_and_sickle.svg.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Fuentes/remnant/Remnant-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 56
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Fuentes/remnant/Remnant-Regular.ttf"

[sub_resource type="DynamicFont" id=5]
size = 56
font_data = SubResource( 4 )

[node name="J2_Puzzle_3B" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
self_modulate = Color( 0.815686, 0.815686, 0.815686, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.82849
margin_right = -2.82849
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PISTA 4" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 359.0
margin_top = -251.0
margin_right = -244.0
margin_bottom = 290.0
custom_fonts/font = SubResource( 1 )
text = "\"Del salon en el angulo oscuro,
de su duena tal vez olvidada,
silenciosa y cubierta de polvo
ve√≠ase el arpa.\"


Gustavo Adolfo Becquer, Rimas VII.
 "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opcion 1" type="Button" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.498039 )
anchor_left = 0.481
anchor_top = 0.652
anchor_right = 0.481
anchor_bottom = 0.652
margin_left = -315.05
margin_top = -280.049
margin_right = 381.95
margin_bottom = -184.049
custom_fonts/font = SubResource( 3 )
text = "Albania"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opcion 2" type="Button" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.498039 )
anchor_left = 0.481
anchor_top = 0.652
anchor_right = 0.481
anchor_bottom = 0.652
margin_left = -315.05
margin_top = -139.287
margin_right = 381.95
margin_bottom = -43.2868
custom_fonts/font = SubResource( 3 )
text = "Andorra"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opcion 3" type="Button" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.498039 )
anchor_left = 0.481
anchor_top = 0.652
anchor_right = 0.481
anchor_bottom = 0.652
margin_left = -315.05
margin_top = -0.169678
margin_right = 381.95
margin_bottom = 95.8308
custom_fonts/font = SubResource( 5 )
text = "ALGERIA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="PISTA 2" type="TextureRect" parent="."]
visible = false
margin_left = 984.0
margin_top = 306.0
margin_right = 1204.0
margin_bottom = 526.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Opcion 1" to="." method="_on_Opcion_1_pressed"]
[connection signal="pressed" from="Opcion 2" to="." method="_on_Opcion_2_pressed"]
[connection signal="pressed" from="Opcion 3" to="." method="_on_Opcion_3_pressed"]
